--- a/amps-to-watts.html
+++ b/amps-to-watts.html
@@ -321,9 +321,12 @@
 
 <main class="main-content" id="main">
 <div class="container">
-<nav aria-label="Breadcrumb" class="breadcrumb">
-<a href="/">Home</a> / <a href="/engineering.html">Engineering</a> / <a href="/engineering/electrical">Electrical (General)</a> / Amps to Watts Calculator
-      </nav>
+<nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
+  <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
+  <a href="engineering.html" class="hover:text-blue-600">Engineering</a> &raquo;
+  <a href="subcategories/electrical.html" class="hover:text-blue-600">Electrical Calculators</a> &raquo;
+  <span class="text-gray-900">Amps to Watts Calculator</span>
+</nav>
 <h1>Amps to Watts Calculator</h1>
 <p>This professional-grade amps to watts calculator converts electrical current (A) and voltage (V) into real power (W). It supports DC, single‑phase AC, and three‑phase AC, with power factor for realistic results. Ideal for engineers, electricians, students, and makers who need fast, accurate power calculations on any device.</p>
 <div class="calculator-layout">
