--- a/mps-to-watts.html
+++ b/mps-to-watts.html
@@ -8,15 +8,15 @@
   <link rel="manifest" href="/site.webmanifest" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Watts to Amps Calculator</title>
-  <meta name="description" content="Convert watts to amps for DC, single phase, or three phase AC circuits. Easy engineering calculator with clear formulas and steps.">
-  <link rel="canonical" href="https://calcdomain.com/watts-to-amps.html"/>
+  <title>Amps to Watts Calculator (DC, Single/Three Phase AC)</title>
+  <meta name="description" content="Convert amps to watts for DC, single-phase, or three-phase AC instantly. Enter current, voltage, and power factor for accurate electrical engineering calculations.">
+  <link rel="canonical" href="https://calcdomain.com/amps-to-watts.html"/>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <script src="search.js" defer></script>
 </head>
 <body class="bg-gray-50 text-gray-900">
-
+  <!-- Header -->
   <header class="bg-white shadow-sm sticky top-0 z-50">
     <nav class="container mx-auto px-4 lg:px-6 py-4">
       <div class="flex justify-between items-center">
@@ -48,15 +48,15 @@
     <div class="flex flex-col lg:flex-row gap-8">
       <section class="w-full lg:w-2/3">
         <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
-  <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
-  <a href="engineering.html" class="hover:text-blue-600">Engineering</a> &raquo;
-  <a href="subcategories/electrical.html" class="hover:text-blue-600">Electrical Calculators</a> &raquo;
-  <span class="text-gray-900">Watts to Amps Calculator</span>
-</nav>
+          <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
+          <a href="engineering.html" class="hover:text-blue-600">Engineering</a> &raquo;
+          <a href="subcategories/electrical.html" class="hover:text-blue-600">Electrical Calculators</a> &raquo;
+          <span class="text-gray-900">Amps to Watts</span>
+        </nav>
         <div class="bg-white p-6 rounded-lg shadow-md">
-          <h1 class="text-3xl font-extrabold text-gray-900 mb-2">Watts to Amps Calculator</h1>
-          <p class="text-gray-600 mb-6">Convert power (W or kW) to current (amps) for DC, single-phase AC, or three-phase AC circuits. Enter your data and see the formula used and step-by-step solution.</p>
-          <form id="wattAmpForm" class="space-y-6">
+          <h1 class="text-3xl font-extrabold text-gray-900 mb-2">Amps to Watts Calculator</h1>
+          <p class="text-gray-600 mb-6">Convert current (amps) to power (watts) for DC, single-phase AC, or three-phase AC circuits. Enter your data and instantly see accurate results and formulas.</p>
+          <form id="ampWattForm" class="space-y-6">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
               <div>
                 <label class="block text-sm font-medium text-gray-700">System Type</label>
@@ -67,22 +67,16 @@
                 </select>
               </div>
               <div>
-                <label class="block text-sm font-medium text-gray-700">Power</label>
-                <div class="flex gap-2">
-                  <input id="powerInput" type="number" step="any" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500" placeholder="eg. 1000" required>
-                  <select id="powerUnit" class="py-2 px-3 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500">
-                    <option value="W">W</option>
-                    <option value="kW">kW</option>
-                  </select>
-                </div>
+                <label class="block text-sm font-medium text-gray-700">Current (A)</label>
+                <input id="ampsInput" type="number" step="any" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500" placeholder="eg. 10" required>
               </div>
               <div>
                 <label class="block text-sm font-medium text-gray-700">Voltage (V)</label>
-                <input id="voltInput" type="number" step="any" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500" placeholder="eg. 120" required>
+                <input id="voltInput" type="number" step="any" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500" placeholder="eg. 230" required>
               </div>
               <div id="pfWrap">
                 <label class="block text-sm font-medium text-gray-700">Power Factor (PF)</label>
-                <input id="pfInput" type="number" step="any" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500" placeholder="eg. 0.8" min="0" max="1">
+                <input id="pfInput" type="number" step="any" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500" placeholder="eg. 0.85" min="0" max="1">
                 <div class="text-xs text-gray-500 mt-1">Required for AC only; leave blank for DC</div>
               </div>
             </div>
@@ -91,8 +85,8 @@
           <div id="results" class="hidden mt-8 bg-blue-50 border border-blue-100 rounded-lg p-6">
             <h2 class="text-lg font-semibold text-gray-800 mb-3">Results</h2>
             <div class="result-card bg-white border p-4 rounded-lg flex flex-col items-center">
-              <span class="font-semibold text-gray-700 mb-2">Current:</span>
-              <span id="ampsResult" class="text-2xl font-bold text-blue-700">0.00 A</span>
+              <span class="font-semibold text-gray-700 mb-2">Power:</span>
+              <span id="wattsResult" class="text-2xl font-bold text-blue-700">0.00 W</span>
             </div>
             <div class="result-card bg-white border p-4 rounded-lg mt-3">
               <span id="formulaUsed" class="text-xs text-gray-500"></span>
@@ -101,27 +95,27 @@
           <section class="mt-10 prose">
             <h2>Formulas Used</h2>
             <ul>
-              <li><b>DC:</b> <code>I = P / V</code></li>
-              <li><b>AC 1-phase:</b> <code>I = P / (V × PF)</code></li>
-              <li><b>AC 3-phase:</b> <code>I = P / (√3 × V × PF)</code><br />where V is line-to-line voltage</li>
+              <li><b>DC:</b> <code>P = I × V</code></li>
+              <li><b>AC 1-phase:</b> <code>P = I × V × PF</code></li>
+              <li><b>AC 3-phase:</b> <code>P = √3 × I × V × PF</code> (V = line-to-line)</li>
             </ul>
             <h2>Worked Example</h2>
-            <p>Example: What is the current if you have a 1500W single-phase AC load, 120V supply, PF = 0.85?</p>
             <ul>
-              <li>I = 1500 / (120 × 0.85) = 14.71 A</li>
+              <li>AC 3-phase: I = 14, V = 400, PF = 0.9</li>
+              <li>P = √3 × 14 × 400 × 0.9 ≈ 8,726 W</li>
             </ul>
             <h2>Frequently Asked Questions</h2>
             <details>
               <summary>Do I need power factor for DC?</summary>
-              <p>No, DC does not use PF. Leave the field blank; it is ignored for DC.</p>
+              <p>No, DC does not use PF. Leave blank for DC.</p>
             </details>
             <details>
-              <summary>What if I only know apparent power (VA)?</summary>
-              <p>Multiply kVA by PF to get real power, then use the real power in this calculator.</p>
+              <summary>What if I only know apparent power (kVA)?</summary>
+              <p>Multiply kVA by PF to get real power (watts).</p>
             </details>
             <details>
-              <summary>Is the answer always the current the circuit will draw?</summary>
-              <p>The result is the running current. For sizing conductors and breakers, follow local electrical codes as you may need to account for continuous loading, starting (inrush), or ambient conditions.</p>
+              <summary>Are results suitable for sizing conductors?</summary>
+              <p>Use results as a starting point. For safety and code compliance, always consult an electrician or reference local regulations.</p>
             </details>
           </section>
           <div class="mt-8 pt-6 border-t border-gray-200 text-sm text-gray-600">
@@ -134,17 +128,17 @@
           <div class="bg-white p-6 rounded-lg shadow-md">
             <h2 class="text-lg font-semibold text-gray-900 mb-3">Quick Reference</h2>
             <ul class="space-y-2 text-sm text-gray-600">
-              <li>DC: <code>I = P / V</code></li>
-              <li>AC 1-phase: <code>I = P / (V × PF)</code></li>
-              <li>AC 3-phase: <code>I = P / (√3 × V × PF)</code></li>
-              <li>Typical PF: 0.8–1 for most loads</li>
-              <li>Always round up for safety</li>
+              <li>DC: <code>P = I × V</code></li>
+              <li>AC 1-phase: <code>P = I × V × PF</code></li>
+              <li>AC 3-phase: <code>P = √3 × I × V × PF</code></li>
+              <li>Typical Power Factor: 0.8–1.0</li>
+              <li>Always round up for safety and code</li>
             </ul>
           </div>
           <div class="bg-white p-6 rounded-lg shadow-md">
             <h2 class="text-lg font-semibold text-gray-900 mb-3">Related Tools</h2>
             <ul class="space-y-2 text-sm text-blue-600">
-              <li><a href="amps-to-watts.html" class="hover:underline">Amps to Watts</a></li>
+              <li><a href="watts-to-amps.html" class="hover:underline">Watts to Amps</a></li>
               <li><a href="volts-to-watts.html" class="hover:underline">Volts to Watts</a></li>
               <li><a href="ohms-law.html" class="hover:underline">Ohm's Law</a></li>
               <li><a href="kva-to-amps.html" class="hover:underline">kVA to Amps</a></li>
@@ -173,32 +167,28 @@
     document.getElementById('systemType').addEventListener('change', togglePF);
     togglePF();
 
-    document.getElementById('wattAmpForm').addEventListener('submit', function(e) {
+    document.getElementById('ampWattForm').addEventListener('submit', function(e) {
       e.preventDefault();
       const sys = document.getElementById('systemType').value;
-      let power = parseFloat(document.getElementById('powerInput').value) || 0;
-      const powerUnit = document.getElementById('powerUnit').value;
+      const amps = parseFloat(document.getElementById('ampsInput').value) || 0;
       const volt = parseFloat(document.getElementById('voltInput').value) || 0;
       const pf = parseFloat(document.getElementById('pfInput').value) || 1;
 
-      if (powerUnit === "kW") power *= 1000;
-
-      let amps = 0, formula = "";
-      if (sys === "dc") {
-        amps = power / volt;
-        formula = "I = P / V";
+      let watts = 0, formula = "";
+      if(sys === "dc") {
+        watts = amps * volt;
+        formula = "P = I × V";
       } else if (sys === "ac1") {
-        amps = power / (volt * pf);
-        formula = "I = P / (V × PF)";
+        watts = amps * volt * pf;
+        formula = "P = I × V × PF";
       } else { // ac3
-        amps = power / (Math.sqrt(3) * volt * pf);
-        formula = "I = P / (√3 × V × PF)";
+        watts = Math.sqrt(3) * amps * volt * pf;
+        formula = "P = √3 × I × V × PF";
       }
-      document.getElementById('ampsResult').textContent = isFinite(amps) && amps>0 ? amps.toFixed(2) + " A" : "0.00 A";
+      document.getElementById('wattsResult').textContent = isFinite(watts) && watts>0 ? watts.toFixed(2) + " W" : "0.00 W";
       document.getElementById('formulaUsed').textContent = "Formula used: " + formula;
       document.getElementById('results').classList.remove('hidden');
     });
-
     document.getElementById('mobile-menu-toggle')?.addEventListener('click', () => {
       const menu = document.getElementById('mobile-menu');
       menu?.classList.toggle('hidden');
