--- a/ohm-s-law-calculator.html
+++ b/ohm-s-law-calculator.html
@@ -230,9 +230,12 @@
 <a class="skip-link" href="#main">Skip to main content</a>
 
 <main class="container" id="main" role="main">
-<nav aria-label="Breadcrumb" class="breadcrumb">
-<a href="/">Home</a> / <a href="https://calcdomain.com/engineering.html">Engineering</a> / <a href="https://calcdomain.com/engineering/electrical.html">Electrical (General)</a> / Ohm's Law Calculator
-    </nav>
+<nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
+  <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
+  <a href="engineering.html" class="hover:text-blue-600">Engineering</a> &raquo;
+  <a href="subcategories/electrical.html" class="hover:text-blue-600">Electrical Calculators</a> &raquo;
+  <span class="text-gray-900">Ohm's Law Calculator</span>
+</nav>
 <h1>Ohm's Law Calculator</h1>
 <p class="intro">
       Enter any two known values among Voltage (V), Current (I), and Resistance (R). This calculator instantly computes the missing quantity and Power (P), with unit conversions and precision control. Built for engineers, technicians, and students who need fast, trustworthy results.
