--- a/btu-to-watts.html
+++ b/btu-to-watts.html
@@ -86,11 +86,11 @@
             <!-- Left Column: Main Content -->
             <main class="w-full lg:w-2/3">
                 <!-- Breadcrumbs -->
-                <nav class="text-sm mb-4 text-gray-600">
-                    <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
-                    <a href="math-conversions.html" class="hover:text-blue-600">Math & Conversion</a> &raquo;
-                    <a href="subcategories/measurement-unit-conversions.html" class="hover:text-blue-600">Unit Conversions</a> &raquo;
-                    <span>BTU/hr to Watts</span>
+                <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
+                <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
+                <a href="engineering.html" class="hover:text-blue-600">Engineering</a> &raquo;
+                <a href="subcategories/electrical.html" class="hover:text-blue-600">Electrical Calculators</a> &raquo;
+                <span class="text-gray-900">BTU/hr to Watts Converter</span>
                 </nav>
 
                 <!-- Page Header -->
