--- a/nec-ampacity.html
+++ b/nec-ampacity.html
@@ -257,9 +257,12 @@
 <a class="skip-link" href="#main-content">Skip to main content</a>
 
 <main class="main" id="main-content" role="main">
-<nav aria-label="Breadcrumb" class="breadcrumb">
-<a href="/">Home</a> / <a href="https://calcdomain.com/engineering.html">Engineering</a> / <a href="https://calcdomain.com/electrical.html">Electrical (US NEC)</a> / NEC Ampacity Calculator
-    </nav>
+<nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
+  <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
+  <a href="engineering.html" class="hover:text-blue-600">Engineering</a> &raquo;
+  <a href="subcategories/electrical.html" class="hover:text-blue-600">Electrical Calculators</a> &raquo;
+  <span class="text-gray-900">NEC Ampacity Calculator</span>
+</nav>
 <h1>NEC Ampacity Calculator</h1>
 <p class="intro">This professional-grade NEC ampacity calculator determines the allowable current-carrying capacity of conductors using NEC Table 310.16, with ambient temperature and conductor bundling adjustments per NEC 310.15. Built for engineers, electricians, and plan reviewers who need fast, reliable, and code-aligned results.</p>
 <div aria-describedby="calc-desc" class="calculator-layout">
