--- a/short-circuit-current.html
+++ b/short-circuit-current.html
@@ -157,6 +157,13 @@
 <body>
 
 <div class="container">
+
+  <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
+  <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
+  <a href="engineering.html" class="hover:text-blue-600">Engineering</a> &raquo;
+  <a href="subcategories/electrical.html" class="hover:text-blue-600">Electrical Calculators</a> &raquo;
+  <span class="text-gray-900">Short Circuit Current Calculator</span>
+</nav>
 <h1>Short Circuit Current Calculator</h1>
 <p>This calculator is designed for electrical engineers and technicians to compute the short circuit current in power systems, ensuring safety and compliance with engineering standards.</p>
 <section aria-labelledby="calculator-heading" class="calculator-container">
@@ -234,8 +241,7 @@
         }
     </script>
 
-
-```
+ 
 
 
 </body></html>
