--- a/watts-to-va.html
+++ b/watts-to-va.html
@@ -146,11 +146,11 @@
             <!-- Left Column: Calculator & Content -->
             <main class="w-full lg:w-2/3">
                 <!-- Breadcrumbs -->
-                <nav class="text-sm mb-4 text-gray-600">
-                    <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
-                    <a href="categories/science-engineering.html" class="hover:text-blue-600">Science & Engineering</a> &raquo;
-                    <a href="/subcategories/power-conversions.html" class="hover:text-blue-600">Power Conversions</a> &raquo;
-                    <span>Watts to VA Converter</span>
+                <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
+                <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
+                <a href="engineering.html" class="hover:text-blue-600">Engineering</a> &raquo;
+                <a href="subcategories/electrical.html" class="hover:text-blue-600">Electrical Calculators</a> &raquo;
+                <span class="text-gray-900">Watts to VA Calculator</span>
                 </nav>
 
                 <div class="bg-white p-6 rounded-lg shadow-md">
