--- a/engineering.html
+++ b/engineering.html
@@ -8,8 +8,8 @@
   <link rel="manifest" href="/site.webmanifest" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Engineering Calculators | CalcDomain</title>
-  <meta name="description" content="Engineering calculators for professionals: structural, electrical, materials, mechanical, process engineering, and more.">
+  <title>Engineering Calculators & Tools | CalcDomain</title>
+  <meta name="description" content="Professional engineering calculators for electrical, structural, mechanical, fluid, and material analysis. FAST, reliable, and free.">
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <script src="search.js" defer></script>
@@ -49,12 +49,48 @@
     </nav>
     <header class="mb-8">
       <h1 class="text-4xl font-extrabold text-gray-900 mb-3">Engineering Calculators</h1>
-      <p class="text-lg text-gray-600">Reliable, professional tools for all major engineering disciplines: structural, materials, process, mechanical, civil, and electrical. Use category cards below to access the full range of calculators.</p>
+      <p class="text-lg text-gray-600">Trusted, authoritative calculators for electrical, mechanical, structural, fluids, materials, and every core discipline. Power up your engineering projects with instant results and detailed methods.</p>
     </header>
-    <section>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
 
-        <!-- Electrical Calculators -->
+    <!-- Quick Links: Most Popular Engineering Calculators -->
+    <section class="mb-10">
+      <h2 class="text-2xl font-semibold text-gray-800 mb-4">Quick Access</h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
+        <a href="ohm-s-law-calculator.html" class="bg-white p-4 rounded-lg border shadow-sm hover:shadow-lg transition flex items-center gap-4">
+          <span class="inline-flex items-center justify-center bg-blue-100 rounded-full h-10 w-10"><svg class="w-6 h-6 text-blue-700" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405M19.395 13.605l-1.376-1.376-1.061 1.061a1.5 1.5 0 01-2.122-2.122l1.06-1.061-1.375-1.376A1.5 1.5 0 1112.56 7.061l1.06 1.061 1.376-1.375A1.5 1.5 0 0117 9.061l-1.061 1.061 1.375 1.376a1.5 1.5 0 11-2.122 2.122z"></path></svg></span>
+          <div><h3 class="font-semibold text-gray-800">Ohm's Law</h3><span class="text-sm text-gray-600">V = I × R, all forms</span></div>
+        </a>
+        <a href="amps-to-watts.html" class="bg-white p-4 rounded-lg border shadow-sm hover:shadow-lg transition flex items-center gap-4">
+          <span class="inline-flex items-center justify-center bg-blue-100 rounded-full h-10 w-10"><svg class="w-6 h-6 text-blue-700" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 17h8M6 6V3a1 1 0 00-1-1H3a1 1 0 00-1 1v3"></path></svg></span>
+          <div><h3 class="font-semibold text-gray-800">Amps to Watts</h3><span class="text-sm text-gray-600">Current to electrical power</span></div>
+        </a>
+        <a href="watts-to-amps.html" class="bg-white p-4 rounded-lg border shadow-sm hover:shadow-lg transition flex items-center gap-4">
+          <span class="inline-flex items-center justify-center bg-blue-100 rounded-full h-10 w-10"><svg class="w-6 h-6 text-blue-700" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 17a4 4 0 004-4v-1a4 4 0 10-8 0v1a4 4 0 004 4z"></path></svg></span>
+          <div><h3 class="font-semibold text-gray-800">Watts to Amps</h3><span class="text-sm text-gray-600">Power to current converter</span></div>
+        </a>
+        <a href="three-phase-power.html" class="bg-white p-4 rounded-lg border shadow-sm hover:shadow-lg transition flex items-center gap-4">
+          <span class="inline-flex items-center justify-center bg-blue-100 rounded-full h-10 w-10"><svg class="w-6 h-6 text-blue-700" fill="none" stroke="currentColor" viewBox="0 0 24 24"><circle cx="12" cy="12" r="4"></circle></svg></span>
+          <div><h3 class="font-semibold text-gray-800">Three Phase Power</h3><span class="text-sm text-gray-600">For motors, grids, industry</span></div>
+        </a>
+        <a href="dead-load.html" class="bg-white p-4 rounded-lg border shadow-sm hover:shadow-lg transition flex items-center gap-4">
+          <span class="inline-flex items-center justify-center bg-blue-100 rounded-full h-10 w-10"><svg class="w-6 h-6 text-blue-700" fill="none" stroke="currentColor" viewBox="0 0 24 24"><rect width="20" height="4" x="2" y="20" rx="2"></rect></svg></span>
+          <div><h3 class="font-semibold text-gray-800">Dead Load</h3><span class="text-sm text-gray-600">Structural, slab, and roof weights</span></div>
+        </a>
+        <a href="eurocode-3-beam-design.html" class="bg-white p-4 rounded-lg border shadow-sm hover:shadow-lg transition flex items-center gap-4">
+          <span class="inline-flex items-center justify-center bg-blue-100 rounded-full h-10 w-10"><svg class="w-6 h-6 text-blue-700" fill="none" stroke="currentColor" viewBox="0 0 24 24"><rect width="20" height="4" x="2" y="10" rx="2"></rect></svg></span>
+          <div><h3 class="font-semibold text-gray-800">Beam Design (Eurocode 3)</h3><span class="text-sm text-gray-600">Steel beam sizing per EN standard</span></div>
+        </a>
+        <a href="gravel.html" class="bg-white p-4 rounded-lg border shadow-sm hover:shadow-lg transition flex items-center gap-4">
+          <span class="inline-flex items-center justify-center bg-blue-100 rounded-full h-10 w-10"><svg class="w-6 h-6 text-blue-700" fill="none" stroke="currentColor" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"></circle></svg></span>
+          <div><h3 class="font-semibold text-gray-800">Materials Volume</h3><span class="text-sm text-gray-600">Concrete, gravel, aggregates</span></div>
+        </a>
+      </div>
+    </section>
+
+    <!-- Subcategories grid -->
+    <section class="mt-12">
+      <h2 class="text-2xl font-semibold text-gray-800 mb-4">Subcategories</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
         <a href="subcategories/electrical.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
           <div class="bg-blue-100 p-3 rounded-full">
             <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -63,31 +99,33 @@
           </div>
           <div>
             <h3 class="font-semibold text-gray-800">Electrical Calculators</h3>
-            <p class="text-sm text-gray-600 mt-1">Watts, amps, volts, power calculations, wiring & circuit tools for electrical engineers and electricians.</p>
+            <p class="text-sm text-gray-600 mt-1">Power, amps, ohm's law, wattage, voltage calculators for all electrical engineering work.</p>
           </div>
         </a>
-
-        <!-- You can add more subcategories like these: -->
+        <!-- Add additional subcategory cards below as desired -->
         <a href="subcategories/structural-engineering.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
           <div class="bg-blue-100 p-3 rounded-full">
-            <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 21V6a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v15"></path></svg>
+            <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <rect width="20" height="4" x="2" y="10" rx="2"></rect>
+            </svg>
           </div>
           <div>
             <h3 class="font-semibold text-gray-800">Structural Engineering</h3>
-            <p class="text-sm text-gray-600 mt-1">Load, moment, steel, concrete, Eurocode, safety, retention & building strength calculators.</p>
+            <p class="text-sm text-gray-600 mt-1">Beam, dead load, eurocode, and safety tools.</p>
           </div>
         </a>
         <a href="subcategories/mechanical-engineering.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
           <div class="bg-blue-100 p-3 rounded-full">
-            <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 21V3a2 2 0 0 0-2-2H9a2 2 0 0 0-2 2v18"></path></svg>
+            <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <circle cx="12" cy="12" r="10"></circle>
+            </svg>
           </div>
           <div>
             <h3 class="font-semibold text-gray-800">Mechanical Engineering</h3>
-            <p class="text-sm text-gray-600 mt-1">Material strength, force, pressure, fluid, engine, HVAC, motion and machine calculators.</p>
+            <p class="text-sm text-gray-600 mt-1">Force, material, energy, and machine calculators.</p>
           </div>
         </a>
-        <!-- ...repeat for other subcategories as desired... -->
-
+        <!-- ...add more as needed... -->
       </div>
     </section>
   </main>
