--- a/index.html
+++ b/index.html
@@ -540,19 +540,26 @@
                 
 
 
-                <a href="engineering.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
-                <div class="bg-blue-100 p-3 rounded-full">
-                    <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"
-                    ></path>
-                    </svg>
-                </div>
-                <div>
-                    <h3 class="font-semibold text-gray-800">Engineering Calculators</h3>
-                    <p class="text-sm text-gray-600 mt-1">Electrical, mechanical, structural, fluids, materials, and more for professionals and students.</p>
-                </div>
+                 <!-- Engineering Category -->
+                <a href="engineering.html" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
+                    <div class="bg-gradient-to-r from-grey-500 to-grey-600 p-6 text-white">
+                        <div class="flex items-center justify-between">
+                            <div>
+                                <h3 class="text-xl font-bold mb-2">Engineering Calculators</h3>
+                                <p class="text-orange-100">9 Calculators</p>
+                            </div>
+                            <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z"></path></svg>
+                        </div>
+                    </div>
+                    <div class="p-6">
+                        <p class="text-gray-600 mb-4">Material estimation, project planning, and construction calculations.</p>
+                        <div class="space-y-2">
+                             
+                        </div>
+                    </div>
                 </a>
+
+ 
 
                 <!-- "Browse All" Card -->
                 <div class="card-hover bg-gradient-to-br from-gray-800 to-gray-900 rounded-lg shadow-md overflow-hidden text-white">
