--- a/index.html
+++ b/index.html
@@ -542,13 +542,13 @@
 
                  <!-- Engineering Category -->
                 <a href="engineering.html" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
-                    <div class="bg-gradient-to-r from-grey-500 to-grey-600 p-6 text-white">
+                    <div class="bg-gradient-to-r from-yellow-500 to-yellow-600 p-6 text-white">
                         <div class="flex items-center justify-between">
                             <div>
                                 <h3 class="text-xl font-bold mb-2">Engineering Calculators</h3>
                                 <p class="text-orange-100">9 Calculators</p>
                             </div>
-<svg width="800px" height="800px" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--emojione-monotone" preserveAspectRatio="xMidYMid meet"><path d="M45 2l-9.396 2.48L29.298 2L19 36.354h10.865L20.352 62L43.65 27.648H29.626z" fill="#000000"></path></svg>                        </div>
+<svg width="800px" height="800px" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--emojione-monotone" preserveAspectRatio="xMidYMid meet"><path d="" fill="#000000"></path></svg>                        </div>
                     </div>
                     <div class="p-6">
                         <p class="text-gray-600 mb-4">Material estimation, project planning, and construction calculations.</p>
