--- a/index.html
+++ b/index.html
@@ -541,23 +541,35 @@
 
 
                  <!-- Engineering Category -->
+             
                 <a href="engineering.html" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
-                    <div class="bg-gradient-to-r from-yellow-500 to-yellow-600 p-6 text-white">
+                    <div class="bg-gradient-to-r from-byellow-500 to-yellow-600 p-6 text-white">
                         <div class="flex items-center justify-between">
                             <div>
-                                <h3 class="text-xl font-bold mb-2">Engineering Calculators</h3>
-                                <p class="text-orange-100">9 Calculators</p>
+                                <h3 class="text-xl font-bold mb-2">Engineering</h3>
+                                <p class="text-blue-100">26 Calculators</p>
                             </div>
+                            <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
+                        </div>
                     </div>
                     <div class="p-6">
-                        <p class="text-gray-600 mb-4">Material estimation, project planning, and construction calculations.</p>
+                        <p class="text-gray-600 mb-4">Electricity, Automation, etc.</p>
                         <div class="space-y-2">
-                             
+                            <div class="flex items-center text-sm text-gray-500">
+                                <span class="w-2 h-2 bg-blue-500 rounded-full mr-2"></span>
+                                Ohm's Law
+                            </div>
+                            <div class="flex items-center text-sm text-gray-500">
+                                <span class="w-2 h-2 bg-blue-500 rounded-full mr-2"></span>
+                                Circuits AC DC
+                            </div>
+                            <div class="flex items-center text-sm text-gray-500">
+                                <span class="w-2 h-2 bg-blue-500 rounded-full mr-2"></span>
+                               Motors  and Transformers
+                            </div>
                         </div>
                     </div>
                 </a>
-
- 
 
                 <!-- "Browse All" Card -->
                 <div class="card-hover bg-gradient-to-br from-gray-800 to-gray-900 rounded-lg shadow-md overflow-hidden text-white">
