--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                  <!-- Engineering Category -->
              
                 <a href="engineering.html" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
-                    <div class="bg-gradient-to-r from-byellow-500 to-yellow-600 p-6 text-white">
+                    <div class="bg-gradient-to-r from-yellow-500 to-yellow-600 p-6 text-white">
                         <div class="flex items-center justify-between">
                             <div>
                                 <h3 class="text-xl font-bold mb-2">Engineering</h3>
