cone volume calcualator

--- a/pythagorean-theorem-calculator.html
+++ b/pythagorean-theorem-calculator.html
@@ -420,8 +420,8 @@
           <div class="bg-white p-6 rounded-lg shadow-sm border">
             <h3 class="font-bold text-lg mb-3">Related geometry tools</h3>
             <ul class="space-y-2 text-sm">
-              <li><a class="text-blue-700 hover:underline" href="distance-formula-calculator.html">Distance Formula Calculator</a></li>
-              <li><a class="text-blue-700 hover:underline" href="right-triangle-solver.html">Right Triangle Solver</a></li>
+              <li><a class="text-blue-700 hover:underline" href="distance-calculator.html">Distance Formula Calculator</a></li>
+              <li><a class="text-blue-700 hover:underline" href="right-triangle-calculator.html">Right Triangle Solver</a></li>
               <li><a class="text-blue-700 hover:underline" href="circle-calculator.html">Circle Calculator</a></li>
             </ul>
           </div>
