--- a/area.html
+++ b/area.html
@@ -11,7 +11,7 @@
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
 <meta content="Professional area calculator for geometry. Compute the area of rectangles, circles, triangles, trapezoids, parallelograms, and regular polygons with step-by-step formulas and unit conversions. WCAG 2.1 AA accessible." name="description"/>
 <meta content="Ugo Candido" name="author"/>
-<link href="https://calcdomain.com/area.html" rel="canonical"/>
+<link href="https://calcdomain.com/area-calculator.html" rel="canonical"/>
 <meta content="#005A9C" name="theme-color"/>
 <meta content="index, follow" name="robots"/>
 <style>
@@ -108,7 +108,7 @@
   "@type": "WebPage",
   "name": "Area Calculator",
   "description": "Compute the area of common shapes—rectangle, circle, triangle, trapezoid, parallelogram, and regular polygons—with step-by-step formulas and unit conversions.",
-  "url": "https://calcdomain.com/area.html",
+  "url": "https://calcdomain.com/area-calculator.html",
   "inLanguage": "en",
   "author": {
     "@type": "Person",
@@ -507,11 +507,11 @@
       <div class="bg-white p-6 rounded-lg shadow-md">
         <h2 class="text-xl font-semibold text-gray-900 mb-4">Related Geometry Tools</h2>
         <ul class="space-y-2 text-sm text-blue-600">
-          <li><a class="hover:underline" href="volume.html">Volume Calculator</a></li>
-          <li><a class="hover:underline" href="perimeter.html">Perimeter Calculator</a></li>
-          <li><a class="hover:underline" href="triangle.html">Triangle Solver</a></li>
-          <li><a class="hover:underline" href="circle.html">Circle Calculator</a></li>
-          <li><a class="hover:underline" href="unit-converter.html">Unit Converter</a></li>
+          <li><a class="hover:underline" href="volume-calculator.html">Volume Calculator</a></li>
+          <li><a class="hover:underline" href="rectangle-area-calculator.html">Rectangle Area Calculator</a></li>
+          <li><a class="hover:underline" href="triangle-calculator.html">Triangle Solver</a></li>
+          <li><a class="hover:underline" href="circle-calculator.html">Circle Calculator</a></li>
+          <li><a class="hover:underline" href="midpoint-calculator.html">Midpoint Calculator</a></li>
         </ul>
       </div>
       <div class="bg-white p-6 rounded-lg shadow-md">
