--- a/triangle-calculator.html
+++ b/triangle-calculator.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Triangle Calculator</title>
   <meta name="description" content="Professional triangle calculator. Solve any triangle from SSS, SAS, or ASA/AAS. Get sides, angles, perimeter, area, heights, inradius, circumradius, and a clean diagram with LaTeX formulas."/>
-  <link rel="canonical" href="https://calcdomain.com/math/geometry/triangle-calculator.html"/>
+  <link rel="canonical" href="https://calcdomain.com/triangle-calculator.html"/>
   <meta name="author" content="Ugo Candido"/>
 
   <!-- Icons (optional placeholders to align with site conventions) -->
@@ -47,7 +47,7 @@
     "@type":"WebPage",
     "name":"Triangle Calculator",
     "description":"Solve triangles from SSS, SAS, or ASA/AAS with LaTeX explanation, diagram, and derived measures.",
-    "url":"https://calcdomain.com/math/geometry/triangle-calculator.html",
+    "url":"https://calcdomain.com/triangle-calculator.html",
     "inLanguage":"en",
     "author":{"@type":"Person","name":"Ugo Candido"},
     "publisher":{"@type":"Organization","name":"CalcDomain"}
@@ -62,7 +62,7 @@
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://calcdomain.com/"},
       {"@type":"ListItem","position":2,"name":"Math","item":"https://calcdomain.com/math.html"},
-      {"@type":"ListItem","position":3,"name":"Geometry","item":"https://calcdomain.com/math/geometry.html"},
+      {"@type":"ListItem","position":3,"name":"Geometry","item":"https://calcdomain.com/subcategories/geometry.html"},
       {"@type":"ListItem","position":4,"name":"Triangle Calculator","item":"https://calcdomain.com/triangle-calculator.html"}
     ]
   }
@@ -139,7 +139,7 @@
     <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
       <a href="index.html" class="hover:text-blue-700">Home</a> &raquo;
       <a href="math.html" class="hover:text-blue-700">Math</a> &raquo;
-      <a href="math/geometry.html" class="hover:text-blue-700">Geometry</a> &raquo;
+      <a href="subcategories/geometry.html" class="hover:text-blue-700">Geometry</a> &raquo;
       <span class="text-gray-900">Triangle Calculator</span>
     </nav>
 
